[package]
name = "herontest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7.0", default-features = false, features = [
  "jpeg",
  "bevy_gilrs",
  "bevy_winit",
  "bevy_render",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_gltf",
  "png",
  "hdr",
  # "vorbis",
  "x11",
  # "filesystem_watcher",
  "dynamic",
  "trace",
  "render",
] }

heron = { version = "3.0.0", features = ["3d"] }
